<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".setting.view.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Location & Language Section side by side -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <!-- Location Section -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="#42000000"
                android:padding="16dp"
                android:elevation="4dp"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_clouds"
                    android:fontFamily="@font/akatab_extrabold"
                    android:padding="12dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="18dp" />
                <RadioGroup
                    android:id="@+id/radio_group_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <RadioButton
                        android:id="@+id/rb_gps"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:buttonTint="@drawable/radio_button_color"                     android:fontFamily="@font/akatab_bold"
                    android:padding="8dp"
                        android:checked="true"
                    android:text="@string/GPS"
                    android:textColor="@color/light_clouds"
                    android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rb_map"
                        android:layout_width="match_parent"
                        android:buttonTint="@color/light_clouds"
                         android:layout_height="48dp"
                         android:fontFamily="@font/akatab_bold"
                         android:padding="8dp"
                         android:text="@string/Map"
                         android:textColor="@color/light_clouds"
                         android:textSize="18sp" />
                </RadioGroup>
            </LinearLayout>

            <!-- Language Section -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="#42000000"
                android:padding="16dp"
                android:elevation="4dp"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_clouds"
                    android:fontFamily="@font/akatab_extrabold"
                    android:padding="12dp"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <RadioGroup
                    android:id="@+id/radio_group_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <RadioButton
                        android:id="@+id/rb_english"
                        android:layout_width="match_parent"
                        android:buttonTint="@color/light_clouds"
                        android:layout_height="48dp"
                        android:fontFamily="@font/akatab_bold"
                        android:padding="8dp"
                        android:text="@string/English"
                        android:textColor="@color/light_clouds"
                        android:textSize="18dp" />

                    <RadioButton
                        android:id="@+id/rb_arabic"
                        android:layout_width="match_parent"
                        android:buttonTint="@color/light_clouds"
                        android:layout_height="48dp"
                        android:fontFamily="@font/akatab_bold"
                        android:padding="8dp"
                        android:text="@string/Arabic"
                        android:textColor="@color/light_clouds"
                        android:textSize="18dp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <!-- Temperature & Wind Speed Section side by side -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <!-- Temperature Section -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="#42000000"
                android:padding="16dp"
                android:elevation="4dp"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_clouds"
                    android:fontFamily="@font/akatab_extrabold"
                    android:padding="12dp"
                    android:text="@string/Temperature"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <RadioGroup
                    android:id="@+id/radio_group_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <RadioButton
                        android:id="@+id/rb_celsius"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/light_clouds"
                        android:layout_height="48dp"
                        android:fontFamily="@font/akatab_bold"
                        android:padding="8dp"
                        android:text="@string/Celsius"
                        android:textColor="@color/light_clouds"
                        android:textSize="18dp" />

                    <RadioButton
                        android:id="@+id/rb_kelvin"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/light_clouds"
                        android:layout_height="48dp"
                        android:fontFamily="@font/akatab_bold"
                        android:padding="8dp"
                        android:text="@string/Kelvin"
                        android:textColor="@color/light_clouds"
                        android:textSize="18dp" />

                    <RadioButton
                        android:id="@+id/rb_fahrenheit"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/light_clouds"
                        android:layout_height="48dp"
                        android:fontFamily="@font/akatab_bold"
                        android:padding="8dp"
                        android:text="@string/Fahrenheit"
                        android:textColor="@color/light_clouds"
                        android:textSize="18dp" />
                </RadioGroup>
            </LinearLayout>

            <!-- Wind Speed Section -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#42000000"
                android:elevation="4dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_clouds"
                    android:fontFamily="@font/akatab_extrabold"
                    android:padding="12dp"
                    android:text="@string/WindSpeed"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <RadioGroup
                    android:id="@+id/radio_group_wind_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <RadioButton
                        android:id="@+id/rb_meter_sec"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/light_clouds"
                        android:layout_height="48dp"
                        android:fontFamily="@font/akatab_bold"
                        android:padding="8dp"
                        android:text="@string/MeterSec"
                        android:textColor="@color/light_clouds"
                        android:textSize="16dp" />

                    <RadioButton
                        android:id="@+id/rb_mile_hour"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/light_clouds"
                        android:layout_height="48dp"
                        android:fontFamily="@font/akatab_bold"
                        android:padding="8dp"
                        android:text="@string/MileHour"
                        android:textColor="@color/light_clouds"
                        android:textSize="16dp" />

                    <!-- New RadioButton for km/h -->
                    <RadioButton
                        android:id="@+id/rb_km_hour"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/light_clouds"
                        android:layout_height="48dp"
                        android:fontFamily="@font/akatab_bold"
                        android:padding="8dp"
                        android:text="@string/Kmh"
                        android:textColor="@color/light_clouds"
                        android:textSize="16dp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <!-- Notifications Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#42000000"
            android:padding="16dp"
            android:elevation="4dp"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_clouds"
                android:fontFamily="@font/akatab_extrabold"
                android:padding="12dp"
                android:text="@string/Notifications"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/disabled"
                android:layout_width="wrap_content"
                android:buttonTint="@color/light_clouds"
                android:layout_height="48dp"
                android:fontFamily="@font/akatab_bold"
                android:padding="8dp"
                android:text="@string/Enable"
                android:textColor="@color/light_clouds"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/enabled"
                android:layout_width="wrap_content"
                android:buttonTint="@color/light_clouds"
                android:layout_height="48dp"
                android:fontFamily="@font/akatab_bold"
                android:padding="8dp"
                android:text="@string/Disable"
                android:textColor="@color/light_clouds"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
